<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imgavengers"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:src="@drawable/avengers"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@+id/imgavengers"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:hint="@string/enter_mobile_number"/>
    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@+id/etMobileNumber"
        android:inputType="textPassword"
        android:hint="@string/enter_password"/>
<Button
    android:id="@+id/btnClickHere"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:background="@color/colorAccent"
    android:layout_below="@+id/etpassword"
    android:textColor="#ffffff"
    android:textSize="18sp"
    android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtRegisterYourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnClickHere"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"
            android:padding="6dp"
            android:text="@string/register_yourself"
            android:textSize="18sp"
            android:textStyle="normal" />


    </RelativeLayout>
</ScrollView>