<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_new_mobile_number"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_new_password"
        android:padding="10dp"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:textStyle="normal"
        android:textSize="16sp"
        android:padding="6dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="390dp"
        android:background="@color/colorAccent"
        android:layout_below="@id/password"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>