<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:inputType="textPersonName"
            android:background="#c66857"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/btnSendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_message"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:textSize="20sp"
            android:layout_margin="15dp"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#ffffff" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgaditi"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/aditi" />

        <TextView
            android:id="@+id/txtLayoutHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/imgaditi"
            android:text="@string/anjali"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLayoutSubheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLayoutHeader"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/imgaditi"
            android:text="My Fav Image"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLayoutSubheader"
            android:layout_marginTop="18sp"
            android:layout_toEndOf="@id/imgaditi"
            android:text="@string/love_this_one"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgAnj"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/anj"/>
            <TextView
                android:id="@+id/txtLayoutHeader1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/imgAnj"
                android:text="@string/anjali"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLayoutSubheader1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLayoutHeader1"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/imgAnj"
                android:text="@string/lonely"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtLayoutSubheader1"
                android:layout_marginTop="18sp"
                android:layout_toEndOf="@id/imgAnj"
                android:text="@string/taking_selfie"
                android:textColor="#000000"
                android:textSize="18sp" />
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgAnjali"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/anjali"/>

        <TextView
            android:id="@+id/txtLayoutHeader2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/imgAnjali"
            android:text="@string/anjali"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLayoutSubheader2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLayoutHeader2"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/imgAnjali"
            android:text="@string/travelling"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLayoutSubheader2"
            android:layout_marginTop="18sp"
            android:layout_toEndOf="@id/imgAnjali"
            android:text="@string/my_fav_cloth"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgmuskan"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/muskan"/>
        <TextView
            android:id="@+id/txtLayoutHeader3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/imgmuskan"
            android:text="@string/anjali"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLayoutSubheader3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLayoutHeader3"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/imgmuskan"
            android:text="@string/near_grandparents"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLayoutSubheader3"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/imgmuskan"
            android:text="@string/enjoying_meal"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgsapna"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/sapna" />
            <TextView
                android:id="@+id/txtLayoutHeader4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anjali"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/imgsapna"/>
            <TextView
                android:id="@+id/txtLayoutSubheader4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_cultural_fest"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgsapna"
                android:layout_below="@id/txtLayoutHeader4"
                android:textColor="#000000"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/txtLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginning_of_enjoyment_with_friends"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgsapna"
                android:layout_below="@+id/txtLayoutSubheader4"
                android:textColor="#000000"
                android:layout_marginTop="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgruhi"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ruhi"/>
            <TextView
                android:id="@+id/txtLayoutHeader5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anjali"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/imgruhi"/>
            <TextView
                android:id="@+id/txtLayoutSubheader5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_fair"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgruhi"
                android:layout_below="@id/txtLayoutHeader5"
                android:textColor="#000000"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txtLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtLayoutSubheader5"
                android:layout_marginTop="18sp"
                android:layout_toEndOf="@id/imgruhi"
                android:text="@string/stylish"
                android:textColor="#000000"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgrani"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/rani"/>
            <TextView
                android:id="@+id/txtLayoutHeader6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anjali"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgrani"
               android:textColor="#000000" />

            <TextView
                android:id="@+id/txtLayoutSubheader6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_with_family"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgrani"
                android:layout_below="@id/txtLayoutHeader6"
                android:textColor="#000000"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/txtLayout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memorable"
                android:textSize="18sp"
                android:layout_toEndOf="@id/imgrani"
                android:layout_below="@+id/txtLayoutSubheader6"
                android:textColor="#000000"
                android:layout_marginTop="18sp" />
        </RelativeLayout>
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"/>
    </LinearLayout>

</ScrollView>





